src/objects/shienirai__c.object
<CustomObject>
    <fields>
        <fullName>MP_OwnerGroup_ML__c</fullName>
        <description>レコードタイプで選択リストを切替</description>
        <label>担当グループ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北海道</fullName>
                </value>
                <value>
                    <fullName>東北</fullName>
                </value>
                <value>
                    <fullName>関東</fullName>
                </value>
                <value>
                    <fullName>長野</fullName>
                </value>
                <value>
                    <fullName>新潟</fullName>
                </value>
                <value>
                    <fullName>東海</fullName>
                </value>
                <value>
                    <fullName>静岡</fullName>
                </value>
                <value>
                    <fullName>北陸</fullName>
                </value>
                <value>
                    <fullName>自動車</fullName>
                </value>
                <value>
                    <fullName>九州</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>四国</fullName>
                </value>
                <value>
                    <fullName>1G</fullName>
                </value>
                <value>
                    <fullName>2G</fullName>
                </value>
                <value>
                    <fullName>関西公共</fullName>
                </value>
                <value>
                    <fullName>関西民需</fullName>
                </value>
                <value>
                    <fullName>千葉</fullName>
                </value>
                <value>
                    <fullName>神奈川</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>東海民需</fullName>
                </value>
                <value>
                    <fullName>東海公共</fullName>
                </value>
                <value>
                    <fullName>NFC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_ProfitCheck_PL__c</fullName>
        <label>プロフィット有無</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_ReceptionDate_DT__c</fullName>
        <label>受付日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_Riyoukoku__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>利用国</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>アセアンその他</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>ブラジル</fullName>
                </value>
                <value>
                    <fullName>米州その他</fullName>
                </value>
                <value>
                    <fullName>英国</fullName>
                </value>
                <value>
                    <fullName>ドイツ</fullName>
                </value>
                <value>
                    <fullName>ベルギー</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>スペイン</fullName>
                </value>
                <value>
                    <fullName>スイス</fullName>
                </value>
                <value>
                    <fullName>オランダ</fullName>
                </value>
                <value>
                    <fullName>チェコ</fullName>
                </value>
                <value>
                    <fullName>ハンガリー</fullName>
                </value>
                <value>
                    <fullName>ロシア</fullName>
                </value>
                <value>
                    <fullName>デンマーク</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_SD_CloseDate_DT__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_SD_OutcomeReason__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>勝敗理由</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>競合せず</fullName>
                </value>
                <value>
                    <fullName>提案内容を評価</fullName>
                </value>
                <value>
                    <fullName>製品・サービスを評価</fullName>
                </value>
                <value>
                    <fullName>営業・SEを評価</fullName>
                </value>
                <value>
                    <fullName>過去からの信用</fullName>
                </value>
                <value>
                    <fullName>価格面を評価</fullName>
                </value>
                <value>
                    <fullName>契約条件を評価</fullName>
                </value>
                <value>
                    <fullName>提案辞退の要請あり</fullName>
                </value>
                <value>
                    <fullName>顧客の計画中止</fullName>
                </value>
                <value>
                    <fullName>顧客予算化未定</fullName>
                </value>
                <value>
                    <fullName>予算削減／予算確保できず</fullName>
                </value>
                <value>
                    <fullName>入札不調</fullName>
                </value>
                <value>
                    <fullName>商談化せず</fullName>
                </value>
                <value>
                    <fullName>顧客体制が不明確でリスク高</fullName>
                </value>
                <value>
                    <fullName>短納期でリスク高</fullName>
                </value>
                <value>
                    <fullName>顧客予算に合わせられない(損益面)</fullName>
                </value>
                <value>
                    <fullName>顧客与信面</fullName>
                </value>
                <value>
                    <fullName>社内体制確保が困難</fullName>
                </value>
                <value>
                    <fullName>適合ソリューションが存在しない</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_SD_OutcomeVendor__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>競合ベンダ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>日立</fullName>
                </value>
                <value>
                    <fullName>東芝</fullName>
                </value>
                <value>
                    <fullName>DELL</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>NTT-D</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>競合なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_SFDC_Kyogo__c</fullName>
        <label>競合先</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>競合先A社</fullName>
                </value>
                <value>
                    <fullName>競合先B社</fullName>
                </value>
                <value>
                    <fullName>競合先C社</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_SFDC_ShouhaiGenin__c</fullName>
        <label>勝敗原因</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>価格</fullName>
                </value>
                <value>
                    <fullName>営業力</fullName>
                </value>
                <value>
                    <fullName>提案ソリューション</fullName>
                </value>
                <value>
                    <fullName>商品力</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_SPhaseSetDate_DT__c</fullName>
        <description>プロセスビルダーで自動設定</description>
        <label>Sフェーズ移行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_SSBShare__c</fullName>
        <description>レコードタイプで自動設定</description>
        <label>SSB共有先</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>産業ビジネス部</fullName>
                </value>
                <value>
                    <fullName>流通ビジネス部</fullName>
                </value>
                <value>
                    <fullName>社会基盤ビジネス部</fullName>
                </value>
                <value>
                    <fullName>公共ビジネス部</fullName>
                </value>
                <value>
                    <fullName>金融ビジネス部</fullName>
                </value>
                <value>
                    <fullName>首都圏ビジネス部</fullName>
                </value>
                <value>
                    <fullName>東日本ビジネス部</fullName>
                </value>
                <value>
                    <fullName>中部ビジネス部</fullName>
                </value>
                <value>
                    <fullName>関西ビジネス部</fullName>
                </value>
                <value>
                    <fullName>西日本ビジネス部</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_SSB_SMARTPrting_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excel管理からの移行時作業用</description>
        <label>【SSB】SMART移行商談</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_ServerSecchi__c</fullName>
        <label>サーバー設置</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>アセアンその他</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>ブラジル</fullName>
                </value>
                <value>
                    <fullName>米州その他</fullName>
                </value>
                <value>
                    <fullName>英国</fullName>
                </value>
                <value>
                    <fullName>ドイツ</fullName>
                </value>
                <value>
                    <fullName>ベルギー</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>スペイン</fullName>
                </value>
                <value>
                    <fullName>スイス</fullName>
                </value>
                <value>
                    <fullName>オランダ</fullName>
                </value>
                <value>
                    <fullName>チェコ</fullName>
                </value>
                <value>
                    <fullName>ハンガリー</fullName>
                </value>
                <value>
                    <fullName>ロシア</fullName>
                </value>
                <value>
                    <fullName>デンマーク</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Support_CommunicationTransform_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】コミュニケーション変革</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Support_MetaArcGrandDesign_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】MetaArcグランドデザイン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Support_OralceCloud_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】Oralceクラウド</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Support_SAP_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Support_Salesforce_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Support_Security_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】セキュリティ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Support_Telework__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fujitsu-CRM(支援依頼)</description>
        <label>【支援】テレワーク</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Teian_Nyusatsu_Date__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>提案/入札予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_TransactionForm_PL__c</fullName>
        <label>取引形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>直販</fullName>
                </value>
                <value>
                    <fullName>直販(パートナー自社利用)</fullName>
                </value>
                <value>
                    <fullName>直販(関連会社自社利用)</fullName>
                </value>
                <value>
                    <fullName>準仕切</fullName>
                </value>
                <value>
                    <fullName>仕切</fullName>
                </value>
                <value>
                    <fullName>仕切(パートナー)</fullName>
                </value>
                <value>
                    <fullName>仕切(関連会社)</fullName>
                </value>
                <value>
                    <fullName>社内仕切</fullName>
                </value>
                <value>
                    <fullName>社内付替</fullName>
                </value>
                <value>
                    <fullName>未定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_UriageKakudo__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>売上確度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_VDIShare_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>共有設定のためプロセスビルダーで自動設定</description>
        <label>VDI共有フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_ValuetsuCategoryOppFlag_CHK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valuetsuカテゴリ商談（支援無）フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_ValuetsuCheck_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valuetsu有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_WholeOrderPlanAmounts_CUR__c</fullName>
        <label>全体受注（予定）金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MP_WholeOrderPlanAmounts_YEN_CUR__c</fullName>
        <label>全体受注予定金額（円）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MP_WholeSalesPlanAmounts_CUR__c</fullName>
        <label>全体売上（予定）金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MP_contribution_ML__c</fullName>
        <label>貢献度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>■レベル1 : Q&amp;A・構成チェック等</fullName>
                </value>
                <value>
                    <fullName>■レベル2 : 提案書作成・構成作成・社内調整等</fullName>
                </value>
                <value>
                    <fullName>■レベル3 : 顧客対応</fullName>
                </value>
                <value>
                    <fullName>■レべル4 : 営業代行</fullName>
                </value>
                <value>
                    <fullName>■レベル5 : それ以上</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>menu__c</fullName>
        <label>支援メニュー</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>theme__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>産業)ライフ統)2営</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>shoudan__c</fullName>
        <label>商談</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>支援依頼</relationshipLabel>
        <relationshipName>r_shiendsO4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>theme__c</fullName>
        <label>テーマカテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field4__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>産業ビジネス本部</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>支援依頼</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>shoudan__c</columns>
        <columns>Field4__c</columns>
        <columns>theme__c</columns>
        <columns>menu__c</columns>
        <columns>Field2__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>S3-{00000000}</displayFormat>
        <label>商談支援No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>